# ukrajinska

./: .gitignore  README.md  pyproject.toml
src/ukrajinska/: __init__.py  core.py
tests/: test_translit.py
