[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ukrajinska"
version = "0.1.0"
authors = [
    { name="Koval Yaroslav", email="yaroslav@koval-dev.org" },
]
description = "A sleek, bidirectional Ukrainian transliteration library based on DSTU 9112 (System A)."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ukrainian", "transliteration", "dstu9112", "latynka", "cyrillic", "latin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
"Homepage" = "https://github.com/koval01/ukrajinska"
"Bug Tracker" = "https://github.com/koval01/ukrajinska/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]